--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,13 @@
 {{ define "main" }}
   <!-- Intro Copy -->
-  <main class="list">
-    <h1 class="hidden">Clever Laziness Blog Feed</h1>
-    {{ $paginator := .Paginate (where .Data.Pages "Type" "articles") 10 }}
-      {{ range $paginator.Pages }}
-        {{ .Render "summary"}}
-    {{ end }}
+  <main id="intro" role="main">
+    <!-- Avatar -->
+    {{ $avatar := resources.Get "img/avatar.png" }}
+    <img src="{{ $avatar.Permalink }}" alt="" class="avatar">
+    <!-- Intro Message -->
+    <h1>Hi, I’m Juan and I like websites. Sometimes I make them.</h1>
+    <h2>You can read about my coding ramblings and other stuff on my <a href="https://www.cleverlaziness.com/" target="_blank" rel="noopener noreferrer">blog</a>!</h2>
+    <!-- Social -->
+    {{ partial "social.html" . }}
   </main>
-  {{ if or .Paginator.HasPrev .Paginator.HasNext }}
-    {{ partial "paginator.html" . }}
-  {{ end }}
 {{ end }}
